<resources>
    <string name="app_name">Minggu 7 SQLite</string>
    <string name="buat_biodata_baru">Buat Biodata Baru</string>
    <string name="nomor">Nomor</string>
    <string name="nama">Nama</string>
    <string name="tgl_lahir">Tanggal Lahir</string>
    <string name="jk">Jenis Kelamin</string>
    <string name="l_p">L atau P</string>
    <string name="alamat">Alamat</string>
    <string name="simpan">Simpan</string>
    <string name="kembali">Kembali</string>
    <string name="textview">TextView</string>
    <string name="update">Update</string>
</resources>